--- a/scss/tienda.scss
+++ b/scss/tienda.scss
@@ -261,33 +261,45 @@
 
     .buscador{
         width: 50%;
-        min-height: 200px;
+        max-width: 50%;
+        height: 200px;
         margin: 50px auto;
-        border: 3px solid #333;
-        position: relative;
-    
+
         display: flex;
         flex-direction: row;
         justify-content: center;
         align-items: center;
 
         .buscador_form{
-            border: 2px solid red;
-            display: flex;
+            width: 60%;
+            #buscar{   
+                width: 100%;
+                padding: 10px;
+                border: 3px solid #686767;
+                border-radius: 8%;
+                -webkit-transition: 0.5s;
+                transition: 0.5s;
+                outline: none;
+                &:hover{
+                    
+                }
+                &:focus{
+                    border: 3px solid rgb(215, 0, 0);
+                }
+                &:active{
+                    
+                }
+            }
         }
 
-        .carrito{
-            display: flex;
-            align-items: center;
-            margin: 0 5px;
-            position: absolute;
-            top: 0;
-            right: 0;
+        #enviar_busqueda{
+            padding: 13px;
+            background-color: rgb(158, 21, 158);
+            border-radius: 6px;
+            color: #fff;
 
-            img{
-                width: 50px;
-                height: 50px;
-                cursor: pointer;
+            &:hover{
+                padding: 1em;
             }
         }
     }
@@ -456,41 +468,54 @@
         
             display: grid;
             grid-template-columns: repeat(4, 1fr);
-            grid-auto-rows: 250px;
-            gap: 20px;
+            grid-auto-rows: 350px;
+            column-gap: 20px;
+            row-gap: 20px;
             /*grid-template-rows: repeat(10, 1fr);*/
 
             .galeria_articulo{
-                position: relative;
-                border: 1px solid rgb(222, 221, 221);  
-                overflow:hidden;
+                height: auto;
+                //background-color: rgb(51, 51, 53); 
+                box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
 
-                img{
+                .imgDiv_G{
                     width: 100%;
-                    height: 100%;
-                    object-fit: cover;
+                    height: 300px;
+                    display: flex;
+                    .img_Art{
+                        width: 100%;
+                        height: 100%;
+                        object-fit:cover;
+                        border: 2px solid rgb(51, 51, 53);
+                        border-radius: 6%;
+                    }
                 }
 
-                div{
-                    background-image: linear-gradient(to right, #ffffff, #dad8f7, #afb4f0, #7a93e9, #0f75e2);
+                #datos_art{
+                    background-color: rgb(240, 242, 249);
                     width: 100%;
-                    color: rgb(0, 0, 0);
+                    height: 50px;
                     padding: 5px;
+                    border-top: 2px solid rebeccapurple;
                 
                     display: flex;
                     justify-content: space-between;
-                    position: absolute;
-                    bottom: 0;
-                    left: 0;
 
-                    p{
-                        margin-right: 5px;
-                        font-weight: 600;
-                        margin:auto 5px;
+                    div{
+                        .nom_prod{
+                            font-weight: bold;
+                            margin-bottom: 10px;
+                        }
+    
+                        .precio{
+                            font-weight: 600;
+                            margin-bottom: 0;
+                        }
                     }
 
-                    button{
-                        padding: 3px 4px;
+                    #comprar{
+                        padding: 10px;
+                        font-size: 1rem;
                         margin-right: 5px;
                         cursor: pointer;
 
@@ -499,18 +524,6 @@
                             color: #ffffff;
                         }
                     }
-                }
-
-                .nom_prod {
-                    width: auto;
-                    font-weight: 600;
-                    background-image: linear-gradient(to right, #ffffff, #dad8f7, #afb4f0, #7a93e9, #0f75e2);
-                    padding: 5px;
-                    border-radius: 10%;
-                
-                    position: absolute;
-                    top: 10px;
-                    left: 10px;
                 }
 
                 &:hover {
